update policy and delete prosidure pages

--- a/public/policy.html
+++ b/public/policy.html
@@ -7,48 +7,14 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Política de Privacidade - ParkingShare</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            color: #333;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: auto;
-            background-color: #fff;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h1,
-        h2,
-        h3 {
-            color: #444;
-        }
-
-        p {
-            line-height: 1.6;
-        }
-
-        a {
-            color: #007BFF;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="base.css">
 </head>
 
 <body>
     <div class="container">
         <h1>Pol&iacute;tica de Privacidade - ParkingShare App</h1>
         <p>&Uacute;ltima atualiza&ccedil;&atilde;o: 10 de setembro de 2023 as 03:54 (Horario de Brasilia)</p>
+        <p>&nbsp;</p>
         <h2>Introdu&ccedil;&atilde;o</h2>
         <p>Bem-vindo ao ParkingShare App. Esta Pol&iacute;tica de Privacidade tem como objetivo inform&aacute;-lo sobre
             como coletamos, usamos, divulgamos e protegemos suas informa&ccedil;&otilde;es pessoais.</p>
