Update pages styles

--- a/public/policy.html
+++ b/public/policy.html
@@ -12,14 +12,15 @@
 
 <body>
     <div class="container">
-        <h1>Pol&iacute;tica de Privacidade - ParkingShare App</h1>
+        <h1>Community Parking Share</h1>
+        <h2>Pol&iacute;tica de Privacidade</h2>
         <p>&Uacute;ltima atualiza&ccedil;&atilde;o: 10 de setembro de 2023 as 03:54 (Horario de Brasilia)</p>
         <p>&nbsp;</p>
-        <h2>Introdu&ccedil;&atilde;o</h2>
+        <h3>Introdu&ccedil;&atilde;o</h3>
         <p>Bem-vindo ao ParkingShare App. Esta Pol&iacute;tica de Privacidade tem como objetivo inform&aacute;-lo sobre
             como coletamos, usamos, divulgamos e protegemos suas informa&ccedil;&otilde;es pessoais.</p>
-        <h2>Coleta de Informa&ccedil;&otilde;es</h2>
-        <h3>Informa&ccedil;&otilde;es Pessoais</h3>
+        <h3>Coleta de Informa&ccedil;&otilde;es</h3>
+        <h4>Informa&ccedil;&otilde;es Pessoais</h4>
         <p>Coletamos as seguintes informa&ccedil;&otilde;es pessoais para fornecer e aprimorar nosso Servi&ccedil;o:</p>
         <ul>
             <li><span>Nome</span>: Usado para a funcionalidade do aplicativo e gerenciamento de contas.</li>
@@ -28,7 +29,7 @@
             <li><span>IDs de usu&aacute;rio</span>: Usado para a funcionalidade do aplicativo e gerenciamento de contas.
             </li>
         </ul>
-        <h3>Informa&ccedil;&otilde;es de Desempenho e Anal&iacute;ticas</h3>
+        <h4>Informa&ccedil;&otilde;es de Desempenho e Anal&iacute;ticas</h4>
         <ul>
             <li><span>Logs de falhas</span>: Utilizados para an&aacute;lise e aprimoramento do aplicativo.</li>
             <li><span>Intera&ccedil;&otilde;es no aplicativo</span>: Coletadas para an&aacute;lise e melhorias no
@@ -36,7 +37,7 @@
             <li><span>IDs do dispositivo ou outras IDs</span>: Usados para an&aacute;lise e aprimoramento do aplicativo.
             </li>
         </ul>
-        <h2>Uso das Informa&ccedil;&otilde;es</h2>
+        <h3>Uso das Informa&ccedil;&otilde;es</h3>
         <p>Utilizamos as informa&ccedil;&otilde;es coletadas para:</p>
         <ul>
             <li>Prover e manter nosso Servi&ccedil;o</li>
@@ -44,19 +45,19 @@
             <li>Melhorar a experi&ecirc;ncia do usu&aacute;rio</li>
             <li>Fins anal&iacute;ticos</li>
         </ul>
-        <h2>Seguran&ccedil;a</h2>
+        <h3>Seguran&ccedil;a</h3>
         <ul>
             <li>Todos os dados s&atilde;o transferidos por uma conex&atilde;o segura (criptografados durante o
                 tr&acirc;nsito).</li>
         </ul>
-        <h2>Exclus&atilde;o de Dados</h2>
+        <h3>Exclus&atilde;o de Dados</h3>
         <p>Voc&ecirc; pode solicitar a exclus&atilde;o de seus dados e conta do aplicativo atrav&eacute;s do seguinte
             link: <a href="https://estaciona.web.app/settings/deleteAllData"
                 target="_new">https://estaciona.web.app/settings/deleteAllData</a>.</p>
-        <h2>Mudan&ccedil;as nesta Pol&iacute;tica</h2>
+        <h3>Mudan&ccedil;as nesta Pol&iacute;tica</h3>
         <p>Podemos atualizar nossa Pol&iacute;tica de Privacidade periodicamente. Recomendamos que voc&ecirc; revise
             esta p&aacute;gina frequentemente para se manter informado sobre quaisquer altera&ccedil;&otilde;es.</p>
-        <h2>Contato</h2>
+        <h3>Contato</h3>
         <p>Se voc&ecirc; tiver d&uacute;vidas sobre esta Pol&iacute;tica de Privacidade, entre em contato conosco em
             <a href="mailto:victor.laureano@gmail.com">victor.laureano@gmail.com</a>.
         </p>
