--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Estaciona - Community Parking Share</title>
+    <link rel="stylesheet" href="base.css">
 
     <style media="screen">
       body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
+      /* #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; } */
       #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
       #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
       #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
+      .container a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
       #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
       #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
       @media (max-width: 600px) {
@@ -21,10 +22,12 @@
     </style>
   </head>
   <body>
-    <div id="message">
-      <h2>Community ParkingShare</h2>
-      <h1>Estaciona Fácil</h1>
+    <div class="container">
+      <h1>Community Parking Share</h1>
+      <h2>Estaciona Fácil</h2>
+      <p>&nbsp;</p>
       <p>O Estaciona Fácil é um aplicativo inovador projetado para simplificar o compartilhamento de vagas de estacionamento em condomínios. Ele resolve o problema comum de moradores de condomínios que desejam compartilhar suas vagas, mas enfrentam dificuldades para coordenar e agendar o uso. Com o EstacionaFácil, os moradores podem facilmente disponibilizar suas vagas e outros moradores podem reservá-las diretamente no aplicativo.</p>
+      <p>&nbsp;</p>
       <a target="_blank" href="https://play.google.com/store/apps/details?id=br.com.victorwads.parkingshare">Download at Play Store</a>
     </div>
   </body>
